<resources>
    <string name="app_name">Im Tied Up!</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="user">Unknowed User</string>
    <string name="new_user">New User</string>
    <string name="t_item_text_title">Task</string>
    <string name="t_item_text"></string>
    <string name="t_item_comment_title">Note</string>
    <string name="t_item_comment"></string>
    <string name="t_item_date_title">Date</string>
    <string name="t_item_date"></string>
    <string name="t_item_priority_title">Priority</string>
    <string name="t_item_priority">Priority</string>
    <string name="t_item_status_title">Status</string>
    <string name="t_item_status"></string>
    <string name="_item_status"></string>
    <string name="add_item_success">TASK ADDED!</string>
    <string name="add_item_fail">ERROR!</string>
    <string name="delete_message">Do you want to get rid of this task?</string>
    <string name="back">Go back</string>
    <string name="edit_item_success">TASK EDITED SUCCESSFUL!</string>
    <string name="priority_1">HIGH</string>
    <string name="priority_2">MEDIUM</string>
    <string name="priority_3">LOW</string>
    <color name="priority_1_color">#f44336</color>
    <color name="priority_2_color">#ff9800</color>
    <color name="priority_3_color">#64dd17</color>
    <string-array name="priorities">
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </string-array>
    <string-array name="status">
        <item>TO DO</item>
        <item>DONE</item>
        <item>HOLD ON</item>
    </string-array>
</resources>
