<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kristian.android.activities.DisplayItemActivity">

        <LinearLayout
            android:id="@+id/linear_layout0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <include
                layout="@layout/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/linear_layout0">
                <TextView
                    android:id="@+id/t_item_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_item_text_title"
                    style="@style/Label"/>
                <EditText
                    android:id="@+id/et_item_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/FullWidthEditText"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/linear_layout1"
            />
            <LinearLayout
                android:id="@+id/linear_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/linear_layout1">

                <TextView
                    android:id="@+id/t_item_comment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_item_comment_title"
                    android:height="25dp"
                    style="@style/Label"
                    />

                <EditText
                    android:id="@+id/et_item_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/FullWidthEditText" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/linear_layout2"
                />

            <LinearLayout
                android:id="@+id/linear_layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/linear_layout2">

                <TextView
                    android:id="@+id/t_item_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_item_date_title"
                    style="@style/Label" />

                <EditText
                    android:id="@+id/et_item_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    style="@style/FullWidthEditText" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/linear_layout3"
                />

            <LinearLayout
                android:id="@+id/linear_layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/linear_layout3">

                <TextView
                    android:id="@+id/t_item_priority_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_item_priority_title"
                    style="@style/Label"/>

                <Spinner
                    android:id="@+id/spinner_priorities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/linear_layout4"
                />

            <LinearLayout
                android:id="@+id/linear_layout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/linear_layout4">

                <TextView
                    android:id="@+id/t_item_status_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_item_status_title"
                    style="@style/Label"/>

                <Spinner
                    android:id="@+id/spinner_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/status"
                    />
            </LinearLayout>
            <View
                android:id="@+id/view_line5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/linear_layout5"
                />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddItem2"
        android:text="Add Item"
        android:layout_alignParentBottom="true"
        android:onClick="onAddItem2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view_line5"/>

        </RelativeLayout>
</ScrollView>